# EchoRM

./: .dvcignore  .gitignore  AGENTS.md  README.md  agn_quasar_reverberation_sonification_agent_spec.yaml  agn_quasar_reverberation_sonification_project_plan.md  dvc.yaml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
ark/: projectlist.md
ark/plans/: 0001-foundation-bootstrap.md  0002-public-repository-boundary.md  0003-research-platform-skeleton.md  0004-workflow-experiment-stack.md  0005-canonical-schemas-manifests.md  0006-agn-watch-gold-ingestion.md  0007-sdss-rm-silver-ingestion.md  0008-ztf-access-layer.md  0009-crossmatch-time-qc.md  0010-classical-lag-wrappers.md  0011-model-based-lag-wrappers.md  0012-consensus-lags-null-diagnostics.md  0013-spectral-decomposition-line-metrics.md  0014-sonification-core-echo-ensemble.md  0015-comparative-mapping-families.md  0016-synthetic-benchmark-suite.md  0017-validation-blinded-efficacy.md  0018-optimization-infrastructure.md  0019-clagn-anomaly-discovery.md  0020-release-catalog-publication.md  0021-benchmark-readiness-hardening.md  (+28 more)
configs/datasets/: default.yaml
manifests/: datasets.yaml
tests/: test_agn_watch_ingestion.py  test_benchmark_readiness.py  test_benchmark_review_app.py  test_broad_validation_packages.py  test_clagn_anomaly_discovery.py  test_classical_lag_wrappers.py  test_consensus_lags.py  test_crossmatch_time_qc.py  test_discovery_snapshot.py  test_documentation_state.py  test_echo_ensemble.py  test_first_benchmark_package.py  test_first_pass_review.py  test_literal_corpora.py  test_local_validation_gate.py  test_mapping_families.py  test_model_based_lag_wrappers.py  test_optimization_infrastructure.py  test_package.py  test_primary_wave_rerun.py  test_public_artifact_rules.py  test_release_artifacts.py  test_repository_skeleton.py  test_root_authority_closeout.py  test_schemas.py  test_sdss_rm_ingestion.py  test_spectral_line_metrics.py  test_synthetic_benchmarks.py  test_validation_efficacy.py  test_workflow_stack.py  test_ztf_access_layer.py
workflows/: Snakefile
(+172 files in other folders)
