[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echorm"
version = "0.1.0"
description = "AGN/quasar reverberation mapping sonification research platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "EchoRM Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "snakemake>=9,<10",
]
scientific = [
  "numpy>=1.23,<2",
  "astropy>=6,<8",
  "astroquery>=0.4.9,<1",
  "optuna>=3,<5",
  "ray[tune]>=2.30,<3",
  "ax-platform>=0.4,<2",
  "pyzdcf>=1,<2",
  "eztao>=0.4,<1",
  "celerite2>=0.3,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "astroquery.*",
  "ax.*",
  "celerite2",
  "eztao.*",
  "optuna",
  "pyqsofit.*",
  "pyzdcf",
  "ray",
  "ray.*",
]
ignore_missing_imports = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
